fixed panel issues with overflow

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+    padding: 0;
+}
 hr{
 	max-width: 50%;
 	height: 1px;
@@ -13,7 +17,9 @@ hr{
 #wrapper{
   overflow: hidden;
   background-image: url('/static/admin/img/back.jpeg');
-  background-size: 100% 100%;
+  background-size: 120%;
+  margin: 0;
+  padding: 0;
 }
 .content{
 	margin-top: 15%
@@ -83,21 +89,24 @@ hr{
   position: absolute;
   right: 0px;
   z-index: 50;
-  height: 100%;
+  height: 95%;
 }
 
 #journals-panel{
     background-color: #555;
-    height: 100%;
+    height: 90%;
     width: 430px;
     position: relative;
-    margin-right: -440px;
+    margin: 0px -440px 0px 0px;
     top: 55px;
-    /*overflow: auto;*/
+    height: 85%;
 }
 #your-journals{
-    height: 100%;
     overflow: auto;
+    height: 100%;
+}
+#journal-list{
+    margin: 0px;
 }
 .journal-block-sample{
   display: none;
